# back/src/api/swagger/swagger.yaml
@@ -101,6 +101,53 @@ paths:
                   type: object
                   $ref: "#/components/schemas/pages"
 
+  /users/{userId}/images/url/${userBucket}:
+    get:
+      tags:
+        - public
+        - images
+      summary: returns the download url for an image
+      description: returns the download url for an image
+      parameters:
+        - $ref: "#/components/parameters/userId"
+        - name: userBucket
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/user-bucket"
+      responses:
+        '200':
+          description: string url for the file long lived
+          content:
+            application/json:
+              schema:
+                type: string
+
+  /users/{userId}/images/list/${userBucket}:
+    get:
+      tags:
+        - public
+        - users
+        - images
+      summary: return a list of images for a given bucket
+      parameters:
+        - $ref: "#/components/parameters/userId"
+        - name: userBucket
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/user-bucket"
+      responses:
+        '200':
+          description: Returns a list of images in the bucket
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  $ref:  "#/components/schemas/bucket-image"
+
   /settings/colours:
     get:
       tags:
@@ -110,7 +157,7 @@ paths:
       summary: get the default colour palette for a site
       description: returns the default colour palette for a given site
       parameters:
-        - $ref: "#/components/parameters/userId"
+        
         - $ref: "#/components/parameters/siteId"
       responses:
         '200':
@@ -178,6 +225,7 @@ components:
       description: logged in user id
       schema:
         type: string
+    
     siteId:
       name: siteId
       in: path
@@ -348,3 +396,31 @@ components:
           title: Date edited
           description: date the page was kast edited
           type: string
+
+    user-bucket:
+      type: object
+      title: userBucket
+      description: information about a users storage bucket for images and the name of the file required
+      properties:
+        bucket:
+          title: Bucket name
+          type: string
+        userId:
+          title: filename
+          type: string
+    
+    bucket-image:
+      type: object
+      title: Bucket Image
+      description: Details of a single image
+      properties:
+        bucket:
+          title: bucket name
+          type: string
+        fullpath: 
+          title: full path to the image
+          type: string
+        name:
+          title: filename of the image
+          type: string
+  
